--- a/app/templates/pro_start.html
+++ b/app/templates/pro_start.html
@@ -142,9 +142,10 @@
 
     <div class="jumbotron mb-3">
         <h1 class="display-4">¡Bienvenido a nuestra aplicación!</h1>
-        <p class="lead"><a class="btn btn-primary btn-lg" href="{{ url_for('index') }}" role="button">HAZTE CORPORATE</a>ahora para comenzar a disfrutar de todas las funcionalidades.</p>
-       
-      </div>
+        <p class="lead"><a class="btn btn-primary btn-lg" href="{{ url_for('index') }}" role="button">HAZTE
+                CORPORATE</a>ahora para comenzar a disfrutar de todas las funcionalidades.</p>
+
+    </div>
 
     <!-- Hero Section -->
     <section class="hero-section">
@@ -2652,7 +2653,7 @@
 
     {% include "inc/suscriptions.html" %}
 
-    {% include "inc/testimonials.html" %}
+    <!--    {% include "inc/testimonials.html" %} -->
 
 
     <!-- CTA Section -->
