--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -2480,7 +2480,7 @@
 
 {% include "inc/features.html" %}
 
-<!--{% include "inc/testimonials.html" %}-->
+{% include "inc/testimonials.html" %}
 
 
 <!-- CTA Section 
