--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -1,13 +1,13 @@
 <!-- Redesigned Header -->
 <header class="header">
 
-  <!-- Top Bar -->
+  <!-- Top Bar
   <div class="top-bar d-flex align-items-right py-2 bg-light">
     <div _class="d-flex flex-wrap gap-3">
 
     </div>
   </div>
-
+ -->
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
@@ -460,7 +460,10 @@
         {% if current_user.is_authenticated %}
         <a href="/dashboard" class="btn btn-outline-primary me-2"><span class="item-responsive">👤 {{ current_user.username
             }} <small>({{ current_user.subscription_plan }})</small></a>
-        </li>
+        
+            <a class="btn btn-primary me-2 ms-1" href="{{ url_for('edit_subscription') }}"><i class="fa-solid fa-rocket"></i>
+              Hazte Pro</a></li>
+           
 
         {% else %}
         <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
