--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -3,21 +3,23 @@
          <div class="jumbotron-content">
             <h1 class="display-3">Analiza webs en profundidad <strong>facilmente</strong></h1>
             <p class="lead">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>6€/mes</b></p>
-            <!--Usa MoOnitor sin coste y genera informes por 9€/mes-->
+            <!--Usa MoOnitor sin coste y genera informes por 9€/mes
             <ul>
                 <li>Detecta +150 problemas web en una misma herramienta</li>
                 <li>Crea informes detallados para ti o tus clientes en segundos</li>
                 <li>Genera informes clave de tus url para tus clientes</li>
                 <li>Aprende nuevas técnicas de marketing digital mientras usas la herramienta</li>
+                -->
                 <!-- 
                 Revisa +150 puntos clave de 5 ambitos diferentes
                 Ofrece informes a tus clientes en segundos
                 La mejor solución para freelances, agencias y estudios
                 Aprende nuevas técnicas de marketing digital mientras usas la herramienta
                 Analiza tiendas, administraciones, portafolios, cualquier url
-                -->
-            </ul>
-            <a href="#pricing" class="btn btn-primary btn-lg btn-cta">Entra ya!</a>
+                
+            </ul> -->
+            <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-2">Entra ya!</a>
+            <a href="{{ url_for('register') }}" class="btn btn-secondary btn-lg me-2">Empezar gratis</a>
         </div>
         <img src="https://ciberpunk.es/wp-content/uploads/2020/11/finance4-slider-pic1.png" alt="Monitoreo de sitio web">
        
