--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,6 +39,15 @@
 
     <script>
         // Menu side toggle
+        //document.addEventListener('DOMContentLoaded', function () {
+        //    var toggler = document.querySelector('.navbar-toggler');
+        //    var navbarCollapse = document.querySelector('.navbar-collapse');
+        //
+        //    toggler.addEventListener('click', function () {
+        //        navbarCollapse.classList.toggle('open');
+        //    });
+        // });
+
         document.addEventListener('DOMContentLoaded', function () {
             var toggler = document.querySelector('.navbar-toggler');
             var navbarCollapse = document.querySelector('.navbar-collapse');
@@ -47,6 +56,8 @@
                 navbarCollapse.classList.toggle('open');
             });
         });
+
+
     </script>
 
 </head>
